--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
@@ -158,6 +158,18 @@
     <ClCompile Include="GameplayState.cpp">
       <Filter>Source\Game States</Filter>
     </ClCompile>
+    <ClCompile Include="..\TinyXML\tinystr.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TinyXML\tinyxml.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TinyXML\tinyxmlerror.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TinyXML\tinyxmlparser.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -296,6 +308,8 @@
     <ClInclude Include="GameplayState.h">
       <Filter>Source\Game States</Filter>
     </ClInclude>
+    <ClInclude Include="..\TinyXML\tinystr.h" />
+    <ClInclude Include="..\TinyXML\tinyxml.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Last Samurai.rc">
