--- a/AnimationEditor/WindowsFormsApplication1/WindowsFormsApplication1/Animation Editor.csproj
+++ b/AnimationEditor/WindowsFormsApplication1/WindowsFormsApplication1/Animation Editor.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
     <Compile Include="CSGP_Direct3D.cs" />
     <Compile Include="CSGP_TextureManager.cs" />
     <Compile Include="Form1.cs">
