--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
@@ -18,9 +18,6 @@
     <Filter Include="Source\Objects">
       <UniqueIdentifier>{6edbe6f7-aac8-41b5-b1c0-a39dd8ac992f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\Game States">
-      <UniqueIdentifier>{d2f7eaad-deba-448b-bfd0-a9c02aa92dfa}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source\Particles">
       <UniqueIdentifier>{b00d15c8-67ca-439c-9005-d026b0cecbeb}</UniqueIdentifier>
     </Filter>
@@ -44,6 +41,18 @@
     </Filter>
     <Filter Include="Source\TinyXML">
       <UniqueIdentifier>{73a1b841-c23d-420e-8625-12f69d930b31}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\MessageSystem">
+      <UniqueIdentifier>{9a5b34fe-4dc9-4d5f-9501-3f9dcb7b22e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Game States">
+      <UniqueIdentifier>{d2f7eaad-deba-448b-bfd0-a9c02aa92dfa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Traps">
+      <UniqueIdentifier>{a7bfe6e8-41df-410c-b258-57c7fcf4c121}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Weapons">
+      <UniqueIdentifier>{6d2e8aab-5e0b-47fe-b5d3-c403280eaa8e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +194,42 @@
     <ClCompile Include="CreateDart.cpp">
       <Filter>Source\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="BitmapFont.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="CreateSwordMan.cpp">
+      <Filter>Source\MessageSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="BowMan.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Spike.cpp">
+      <Filter>Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="DartCannon.cpp">
+      <Filter>Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="Cannon.cpp">
+      <Filter>Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="Rock.cpp">
+      <Filter>Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="SmashingColumns.cpp">
+      <Filter>Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="Arrow.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="CannonBall.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="DestroyActorMessage.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="CreateCannonBallMessage.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -322,7 +367,6 @@
     <ClInclude Include="GameplayState.h">
       <Filter>Source\Game States</Filter>
     </ClInclude>
-    <ClInclude Include="Message.h" />
     <ClInclude Include="Son.h">
       <Filter>Source\Entities</Filter>
     </ClInclude>
@@ -347,6 +391,37 @@
     <ClInclude Include="CreateDart.h">
       <Filter>Source\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="MessageID.h">
+      <Filter>Source\MessageSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="CreateSwordMan.h">
+      <Filter>Source\MessageSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="BowMan.h" />
+    <ClInclude Include="Cannon.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="BitmapFont.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="DartCannon.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="Rock.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="SmashingColumns.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="Spike.h">
+      <Filter>Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="Arrow.h">
+      <Filter>Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="CannonBall.h" />
+    <ClInclude Include="DestroyActorMessage.h" />
+    <ClInclude Include="CreateCannonBallMessage.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Last Samurai.rc">
