--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="Arrow.cpp" />
     <ClCompile Include="BitmapFont.cpp" />
     <ClCompile Include="BowMan.cpp" />
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="CannonBall.cpp" />
     <ClCompile Include="CreateArrowMessage.cpp" />
@@ -51,6 +52,7 @@
     <ClCompile Include="GameplayState.cpp" />
     <ClCompile Include="InstructionsState.cpp" />
     <ClCompile Include="Layer.cpp" />
+    <ClCompile Include="Link.cpp" />
     <ClCompile Include="LoadGameState.cpp" />
     <ClCompile Include="LoadState.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -59,9 +61,12 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleFlyweight.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
+    <ClCompile Include="ParticleMass.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Pulley.cpp" />
     <ClCompile Include="Rock.cpp" />
+    <ClCompile Include="Rope.cpp" />
     <ClCompile Include="SaveGameState.cpp" />
     <ClCompile Include="SmashingColumns.cpp" />
     <ClCompile Include="Son.cpp" />
@@ -98,6 +103,7 @@
     <ClInclude Include="Arrow.h" />
     <ClInclude Include="BitmapFont.h" />
     <ClInclude Include="BowMan.h" />
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Cannon.h" />
     <ClInclude Include="CannonBall.h" />
     <ClInclude Include="CreateArrowMessage.h" />
@@ -119,6 +125,7 @@
     <ClInclude Include="IGameState.h" />
     <ClInclude Include="InstructionsState.h" />
     <ClInclude Include="Layer.h" />
+    <ClInclude Include="Link.h" />
     <ClInclude Include="LoadGameState.h" />
     <ClInclude Include="LoadState.h" />
     <ClInclude Include="MainMenuState.h" />
@@ -127,10 +134,13 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleFlyweight.h" />
     <ClInclude Include="ParticleManager.h" />
+    <ClInclude Include="ParticleMass.h" />
     <ClInclude Include="PauseState.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Pulley.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Rock.h" />
+    <ClInclude Include="Rope.h" />
     <ClInclude Include="SaveGameState.h" />
     <ClInclude Include="SmashingColumns.h" />
     <ClInclude Include="Son.h" />
