--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
@@ -32,7 +32,6 @@
     <ClCompile Include="Arrow.cpp" />
     <ClCompile Include="BitmapFont.cpp" />
     <ClCompile Include="BowMan.cpp" />
-    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="CannonBall.cpp" />
     <ClCompile Include="CreateArrowMessage.cpp" />
@@ -52,7 +51,6 @@
     <ClCompile Include="GameplayState.cpp" />
     <ClCompile Include="InstructionsState.cpp" />
     <ClCompile Include="Layer.cpp" />
-    <ClCompile Include="Link.cpp" />
     <ClCompile Include="LoadGameState.cpp" />
     <ClCompile Include="LoadState.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -61,12 +59,10 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleFlyweight.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
-    <ClCompile Include="ParticleMass.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Pulley.cpp" />
+    <ClCompile Include="PopUpSpikes.cpp" />
     <ClCompile Include="Rock.cpp" />
-    <ClCompile Include="Rope.cpp" />
     <ClCompile Include="SaveGameState.cpp" />
     <ClCompile Include="SmashingColumns.cpp" />
     <ClCompile Include="Son.cpp" />
@@ -103,7 +99,6 @@
     <ClInclude Include="Arrow.h" />
     <ClInclude Include="BitmapFont.h" />
     <ClInclude Include="BowMan.h" />
-    <ClInclude Include="Box.h" />
     <ClInclude Include="Cannon.h" />
     <ClInclude Include="CannonBall.h" />
     <ClInclude Include="CreateArrowMessage.h" />
@@ -125,7 +120,6 @@
     <ClInclude Include="IGameState.h" />
     <ClInclude Include="InstructionsState.h" />
     <ClInclude Include="Layer.h" />
-    <ClInclude Include="Link.h" />
     <ClInclude Include="LoadGameState.h" />
     <ClInclude Include="LoadState.h" />
     <ClInclude Include="MainMenuState.h" />
@@ -134,13 +128,11 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleFlyweight.h" />
     <ClInclude Include="ParticleManager.h" />
-    <ClInclude Include="ParticleMass.h" />
     <ClInclude Include="PauseState.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Pulley.h" />
+    <ClInclude Include="PopUpSpikes.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Rock.h" />
-    <ClInclude Include="Rope.h" />
     <ClInclude Include="SaveGameState.h" />
     <ClInclude Include="SmashingColumns.h" />
     <ClInclude Include="Son.h" />
